apps/base/tool-syncthing/deploy/discovery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  ports:
  - port: 8080
    name: http
    targetPort: http
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/component: discovery
