apps/base/tool-syncthing/deploy/discovery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - syncthing-discovery.tool.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: syncthing-discovery.tool.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discovery
            port:
              number: 8080
